# Doom

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  imgui.ini  samp.c  todo.calco
esrc/: main.c
esrc/test/: samp.c  samp.h
libs/cimgui/: CMakeLists.txt  Makefile
libs/glfw/: CMakeLists.txt
libs/imgui_impl/: CMakeLists.txt
libs/nuklear/: CMakeLists.txt
libs/nuklear/include/nuklear/: nuklear_glfw_gl3.h
src/: cimgui_include.h  defines.h  dmath.c  dmath.h  entity.h  game.c  game.h  game_impl.c  imgui.ini  main.c  math.h  os_utils.c  os_utils.h
